fix driver path

--- a/src/test/resources/properties/config.properties
+++ b/src/test/resources/properties/config.properties
@@ -7,5 +7,5 @@ app.url=https://www.flipkart.com/
 userName=9581019049
 password=Sowmya@12
 
-chrome.driver.binary.path=chromedriver.exe
-firefox.driver.binary.path=geckodriver.exe
+chrome.driver.binary.path=drivers/chromedriver.exe
+firefox.driver.binary.path=drivers/geckodriver.exe
