adding webdrivermanager dependency

--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,13 @@
             <version>1.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.2.2</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 
